# ziphere

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: index.html
src/: _comde.rs  _error.rs  _formats.rs  _lib.rs  _utils.rs  comde.rs  error.rs  formats.rs  lib.rs  main.rs  utils.rs  view.rs
src/_formats/: _sevenz.rs  _zip.rs
src/formats/: sevenz.rs  zip.rs
