[package]
name = "ziphere"
authors = ["Zhixia <zhixiaovo@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["compress", "decompress", "zip"]
categories = ["filesystem", "compression"]
description = "Support easy-to-use apis for compressing and decompressing"
homepage = "https://zxzxovo.github.io/ziphere"
documentation = "https://docs.rs/ziphere"
repository = "https://github.com/zxzxovo/ziphere"

[lib]
name = "ziphere"
path = "src/lib.rs"

[features]
default = ["all"]
zip = []
sevenz = ["sevenz-rust2/aes256", "sevenz-rust2/compress"]
sevenz-zstd = ["sevenz", "sevenz-rust2/zstd"]
sevenz-deflate = ["sevenz", "sevenz-rust2/deflate"]
sevenz-all = ["sevenz-zstd", "sevenz-deflate"]
all = ["zip", "sevenz-all", ]

[profile.release]
opt-level = 3
lto = true
overflow-checks = false
codegen-units = 1
strip = "debuginfo"

[dependencies]
thiserror = "2"
walkdir = "2.5"
sevenz-rust2 = "0.14"
zip = "4.1"


[package.metadata.docs.rs]
all-features = true