[package]
name = "ziphere"
authors = ["Zhixia <zhixiaovo@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["compress", "decompress", "zip"]
categories = ["filesystem", "compression"]
description = "Support easy-to-use apis for compressing and decompressing"
homepage = "https://zxzxovo.github.io/ziphere"
documentation = "https://docs.rs/ziphere"
repository = "https://github.com/zxzxovo/ziphere"

[lib]
name = "ziphere"
path = "src/lib.rs"

[[bin]]
name = "ziphere"
path = "src/main.rs"

[features]
default = ["all"]
all = ["zip-all", "sevenz-all", ]
min = ["zip", "sevenz"]
# zip
zip = ["zip/aes-crypto"]
zip-zstd = ["zip", "zip/zstd"]
zip-lzma = ["zip", "zip/lzma"]
zip-deflate = ["zip", "zip/_deflate-any"]
zip-all = ["zip-zstd", "zip-lzma", "zip-deflate"]
# 7z
sevenz = ["sevenz-rust2/aes256", "sevenz-rust2/compress"]
sevenz-zstd = ["sevenz", "sevenz-rust2/zstd"]
sevenz-deflate = ["sevenz", "sevenz-rust2/deflate"]
sevenz-bzip2 = ["sevenz", "sevenz-rust2/bzip2"]
sevenz-ppmd = ["sevenz", "sevenz-rust2/ppmd"]
sevenz-all = ["sevenz-zstd", "sevenz-deflate", "sevenz-bzip2", "sevenz-ppmd"]

[profile.release]
opt-level = 3
lto = true
overflow-checks = false
codegen-units = 1
strip = "debuginfo"

[dependencies]
thiserror = "^2"
walkdir = "^2.5"
sevenz-rust2 = "^0.19"
zip = "^5"
clap = { version = "4.5.48", features = ["derive"] }


[package.metadata.docs.rs]
all-features = true
